--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,66 +1,66 @@
-aiohttp==3.9.3
-aiohttp-retry==2.8.3
-aiosignal==1.3.1
-annotated-types==0.7.0
-attrs==23.2.0
-bcrypt==4.1.3
-blinker==1.7.0
-certifi==2024.2.2
-charset-normalizer==3.3.2
-click==8.1.7
-distlib==0.3.8
-dnspython==2.6.1
-filelock==3.14.0
-Flask==3.0.3
-Flask-Cors==4.0.1
-Flask-PyMongo==2.3.0
-frozenlist==1.4.1
-greenlet==3.0.3
-idna==3.6
-iniconfig==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.3
-joblib==1.4.2
-MarkupSafe==2.1.5
-multidict==6.0.5
-nltk==3.8.1
-numpy==1.26.4
-packaging==24.0
-pandas==2.2.2
-pipenv==2023.12.1
-platformdirs==4.2.1
-playwright==1.42.0
-pluggy==1.4.0
-psutil==5.9.8
-psycopg==3.1.18
-psycopg-binary==3.1.18
-psycopg-pool==3.2.1
-py==1.11.0
-pydantic==2.7.3
-pydantic_core==2.18.4
-pyee==11.0.1
-PyJWT==2.8.0
-pymongo==4.7.3
-pytest==8.1.1
-pytest-base-url==2.1.0
-pytest-playwright==0.4.4
-pytest-xprocess==0.23.0
+aiohttp
+aiohttp-retry
+aiosignal
+annotated-types
+attrs
+bcrypt
+blinker
+certifi
+charset-normalizer
+click
+distlib
+dnspython
+filelock
+Flask
+Flask-Cors
+Flask-PyMongo
+frozenlist
+greenlet
+idna
+iniconfig
+itsdangerous
+Jinja2
+joblib
+MarkupSafe
+multidict
+nltk
+numpy
+packaging
+pandas
+pipenv
+platformdirs
+playwright
+pluggy
+psutil
+psycopg
+psycopg-binary
+psycopg-pool
+py
+pydantic
+pydantic_core
+pyee
+PyJWT
+pymongo
+pytest
+pytest-base-url
+pytest-playwright
+pytest-xprocess
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-python-slugify==8.0.4
-pytz==2024.1
-regex==2024.5.15
-requests==2.31.0
-scikit-learn==1.5.0
-scipy==1.13.1
-six==1.16.0
-text-unidecode==1.3
-threadpoolctl==3.5.0
-tqdm==4.66.4
-twilio==9.0.4
-typing_extensions==4.10.0
-tzdata==2024.1
-urllib3==2.2.1
-virtualenv==20.26.1
-Werkzeug==3.0.1
-yarl==1.9.4
+python-dotenv
+python-slugify
+pytz
+regex
+requests
+scikit-learn
+scipy
+six
+text-unidecode
+threadpoolctl
+tqdm
+twilio
+typing_extensions
+tzdata
+urllib3
+virtualenv
+Werkzeug
+yarl
